--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -350,7 +350,8 @@ ion-icon {
     text-align: center;
     border-radius: 10px;
     color: white;
-    margin-left: 27%;
+    display:flex;
+    justify-content:center;
     font-size: 17px;
 }
 
