--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -320,6 +320,8 @@ ion-icon {
     background-color: white;
     width: 22%;
     height: 100%;
+    align-items:center;
+    text-align:center;
     border-radius: 10px;
     margin: 5px 25px;
     padding: 20px 25px;
